--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <figure><img src="images/logo.png" alt=""></figure>
        <nav class="navbar">
             <a href="">Home</a>
-            <a href="">Praias</a>
+            <a href="/htmls/praias.html">Praias</a>
             <a href="">Sobre Nós</a>
        </nav>
     </header>
