--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <header>
         <figure><img src="images/logo.png" alt=""></figure>
        <nav class="navbar">
-            <a href="">Home</a>
+            <a href="home.html">Home</a>
             <a href="/htmls/praias.html">Praias</a>
             <a href="">Sobre Nós</a>
        </nav>
