--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href= "/styles/global.css">
 </head>
 <body>
-    <p>TESTE</p>
+    <header>
+        <figure><img src="images/logo.png" alt=""></figure>
+       <nav class="navbar">
+            <a href="">Home</a>
+            <a href="/htmls/praias.html">Praias</a>
+            <a href="">Sobre Nós</a>
+       </nav>
+    </header>
     
 </body>
 </html>
