--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -10,11 +10,14 @@
     <header>
         <figure><img src="images/logo.png" alt=""></figure>
        <nav class="navbar">
-            <a href="">Home</a>
+            <a href="/home.html">Home</a>
             <a href="/htmls/praias.html">Praias</a>
             <a href="">Sobre Nós</a>
        </nav>
     </header>
+    <main>
+        
+    </main>
     
 </body>
 </html>
