--- a/htmls/sobreNos.html
+++ b/htmls/sobreNos.html
@@ -12,13 +12,11 @@
        <nav class="navbar">
             <a href="/home.html">Home</a>
             <a href="/htmls/praias.html">Praias</a>
-            <a href="/htmls/sobreNos.html">Sobre Nós</a>
+            <a href="">Sobre Nós</a>
        </nav>
     </header>
     <main>
-        <section class="praia">
-            <img src="/images/OIP.jfif" alt="">
-        </section>
+
     </main>
     
 </body>
