--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praias</title>
     <link rel="stylesheet" href= "/styles/global.css">
+    <link rel="stylesheet" href="/styles/praias.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,9 @@
     </header>
     <main>
         <section class="praia">
+            <div class="quadro">
             <img src="/images/OIP.jfif" alt="">
+            </div>
         </section>
     </main>
     
