--- a/htmls/sobreNos.html
+++ b/htmls/sobreNos.html
@@ -12,7 +12,7 @@
        <nav class="navbar">
             <a href="/home.html">Home</a>
             <a href="/htmls/praias.html">Praias</a>
-            <a href="">Sobre Nós</a>
+            <a href="/htmls/sobreNos.html">Sobre Nós</a>
        </nav>
     </header>
     <main>
