--- a/htmls/sobreNos.html
+++ b/htmls/sobreNos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praias</title>
     <link rel="stylesheet" href= "/styles/global.css">
+    <link rel="stylesheet" href="/styles/sobrenos.css">
 </head>
 <body>
     <header>
@@ -12,11 +13,48 @@
        <nav class="navbar">
             <a href="/home.html">Home</a>
             <a href="/htmls/praias.html">Praias</a>
-            <a href="">Sobre Nós</a>
+            <a href="/htmls/sobreNos.html">Sobre Nós</a>
        </nav>
     </header>
     <main>
-
+        <section id="participantes">
+            <header>Participantes</header>
+            <section class="participantes-container">
+                <div class="participante">
+                    <figure><img src="/images/arthur.svg" alt=""></figure>
+                    <h1>Arthur Tavares</h1>
+                    <h1>1TDSPK</h1>
+                    <a href="mailto:rm554970@fiap.com.br">Email</a>
+                    <a href="https://github.com/arthurarraes" target="_blank">
+                        <img src="/images/github-mark.svg" alt="">
+                    </a>
+                </div>
+                <div class="participante">
+                    <figure><img src="/images/willian.svg" alt=""></figure>
+                    <h1>Willian Moreira</h1>
+                    <h1>1TDSPK</h1>
+                    <a href="mailto:rm555152@fiap.com.br">Email</a>
+                    <a href="https://github.com/WillianMoreiraBFP" target="_blank">
+                        <img src="/images/github-mark.svg" alt="">
+                    </a>
+                </div>
+                <div class="participante">
+                    <figure><img src="/images/noma.jfif" class="noma"alt=""></figure>
+                    <h1>Gabriel Munno Noma</h1>
+                    <h1>1TDSPK</h1>
+                    <a href="mailto:rm557494@fiap.com.br">Email</a>
+                    <a href="https://github.com/GabrielNoma" target="_blank">
+                        <img src="/images/github-mark.svg" alt="">
+                    </a>
+                </div>
+            </section>
+    </section>
+    <section id="projeto">
+        <header>Projeto</header>
+        <h2>Nosso projeto visa desenvolver uma plataforma web inovadora dedicada ao monitoramento e conservação dos ecossistemas marinhos, com foco na limpeza das praias e mares. Através de um sistema de cadastro e classificação da limpeza das praias, nossa plataforma oferece informações precisas e atualizadas para frequentadores, autoridades locais e ONGs. Os usuários podem consultar o status de limpeza das praias, acessar relatórios detalhados e receber notificações e alertas sobre mudanças na classificação das praias.
+            Além disso, nosso sistema de avaliação permite o feedback colaborativo, engajando a comunidade na preservação ambiental. A plataforma é responsiva e acessível em diversos dispositivos, garantindo alta disponibilidade e segurança dos dados. Nossa solução promove a conscientização ambiental e apoia a formulação de políticas públicas.
+            Ao estabelecer parcerias com ONGs e autoridades governamentais, buscamos ampliar o impacto da nossa iniciativa, atraindo recursos e colaborando para a preservação dos oceanos. Estamos comprometidos em fornecer uma ferramenta eficaz e confiável para a conservação marinha.</h2>
+    </section>
     </main>
     
 </body>
