--- a/home.html
+++ b/home.html
@@ -19,10 +19,44 @@
     </header>
     <main>
         <section class="hero">
-            
             <img src="images/background-home.jpg" alt="">
-            <h1>Preservação Costeira: Escolha praias mais limpas</h1>
-            
+        </section>
+        <section class="mapa">
+            <header>
+                <h1>Preservação Costeira: Escolha praias mais limpas</h1>
+                <h1>Ajude o Meio Ambiente, ajude as praias</h1>
+            </header>
+            <img src="images/mapa.png" alt="">
+        </section>
+        <section id="projeto">
+            <header>Projeto</header>
+            <h2>Nosso projeto visa desenvolver uma plataforma web inovadora dedicada ao monitoramento e conservação dos ecossistemas marinhos, com foco na limpeza das praias e mares. Através de um sistema de cadastro e classificação da limpeza das praias, nossa plataforma oferece informações precisas e atualizadas para frequentadores, autoridades locais e ONGs. Os usuários podem consultar o status de limpeza das praias, acessar relatórios detalhados e receber notificações e alertas sobre mudanças na classificação das praias.
+                Além disso, nosso sistema de avaliação permite o feedback colaborativo, engajando a comunidade na preservação ambiental. A plataforma é responsiva e acessível em diversos dispositivos, garantindo alta disponibilidade e segurança dos dados. Nossa solução promove a conscientização ambiental e apoia a formulação de políticas públicas.
+                Ao estabelecer parcerias com ONGs e autoridades governamentais, buscamos ampliar o impacto da nossa iniciativa, atraindo recursos e colaborando para a preservação dos oceanos. Estamos comprometidos em fornecer uma ferramenta eficaz e confiável para a conservação marinha.</h2>
+        </section>
+        <section class="faq">
+            <header>FAQ</header>
+            <div class="faq-text">
+                <h1>Como posso reportar a condição das praias através da plataforma?</h1>
+                <h2>Você pode reportar a condição das praias através de um simples processo de registro na plataforma. Basta acessar a seção de relatório de praias, onde você pode fornecer informações sobre a limpeza, qualidade da água e quaisquer outros aspectos relevantes.</h2>
+            </div>
+            <div class="faq-text">
+                <h1>Como as informações coletadas são utilizadas para informar ONGs e o governo sobre praias sujas?</h1>
+                <h2>As informações que você fornece são compiladas e analisadas para identificar áreas com problemas de limpeza. Esses dados são então compartilhados com ONGs e autoridades governamentais para que possam direcionar esforços de limpeza e implementar medidas corretivas.</h2>
+            </div>
+            <div class="faq-text">
+                <h1>Como os banhistas podem se beneficiar dessas informações?</h1>
+                <h2>Os banhistas podem acessar os dados atualizados sobre a condição das praias através da plataforma, o que lhes permite fazer escolhas informadas sobre onde passar seu tempo de lazer. Ao evitar praias sujas, eles contribuem indiretamente para a preservação ambiental.</h2>
+            </div>
+            <div class="faq-text">
+                <h1>Existe alguma classificação ou sistema de pontuação para as praias na plataforma?</h1>
+                <h2>Sim, implementamos um sistema de classificação que atribui uma pontuação às praias com base nos relatórios dos usuários. Isso ajuda a destacar as praias mais limpas e a incentivar esforços para melhorar a condição das praias com pontuações mais baixas.
+                </h2>
+            </div>
+            <div class="faq-text">
+                <h1>Quais medidas estão sendo tomadas para garantir a precisão e confiabilidade das informações fornecidas pelos usuários?</h1>
+                <h2>Implementamos um sistema de verificação e validação dos relatórios dos usuários para garantir a precisão e confiabilidade das informações. Além disso, encorajamos a comunidade a contribuir de forma responsável e ética para manter a integridade dos dados.</h2>
+            </div>
         </section>
     </main>
 </body>
