--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -35,6 +35,7 @@
                     <li><p>País: Brasil</p></li>
                     <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
+                    <button><span>Saiba Mais</span></button>
                 </ul>
             </article>
             
