--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -23,6 +23,13 @@
             </div>
         </section>
     </main>
-    
+    <footer>
+        <img src="/images/logo.png" alt="">
+        <div>
+            <h1>Arthur Tavares Arraes</h1>
+            <h1>Willian Moreira</h1>
+            <h1>Gabriel de Munno Noma</h1>
+        </div>
+    </footer>
 </body>
 </html>
