--- a/htmls/sobreNos.html
+++ b/htmls/sobreNos.html
@@ -49,7 +49,24 @@
                 </div>
             </section>
     </section>
+    <section id="projeto">
+        <header>Projeto</header>
+        <div>
+            <img src="/images/praia-sobre-nos.jpeg" alt="">
+        <h2>Nosso projeto visa desenvolver uma plataforma web inovadora dedicada ao monitoramento e conservação dos ecossistemas marinhos, com foco na limpeza das praias e mares. Através de um sistema de cadastro e classificação da limpeza das praias, nossa plataforma oferece informações precisas e atualizadas para frequentadores, autoridades locais e ONGs. Os usuários podem consultar o status de limpeza das praias, acessar relatórios detalhados e receber notificações e alertas sobre mudanças na classificação das praias.
+            Além disso, nosso sistema de avaliação permite o feedback colaborativo, engajando a comunidade na preservação ambiental. A plataforma é responsiva e acessível em diversos dispositivos, garantindo alta disponibilidade e segurança dos dados. Nossa solução promove a conscientização ambiental e apoia a formulação de políticas públicas.
+            Ao estabelecer parcerias com ONGs e autoridades governamentais, buscamos ampliar o impacto da nossa iniciativa, atraindo recursos e colaborando para a preservação dos oceanos. Estamos comprometidos em fornecer uma ferramenta eficaz e confiável para a conservação marinha.</h2>
+        </div>
+    </section>
     </main>
+    <footer>
+        <img src="/images/logo.png" alt="">
+        <div>
+            <h1>Arthur Tavares Arraes</h1>
+            <h1>Willian Moreira</h1>
+            <h1>Gabriel de Munno Noma</h1>
+        </div>
+    </footer>
     
 </body>
 </html>
