--- a/htmls/sobreNos.html
+++ b/htmls/sobreNos.html
@@ -21,7 +21,7 @@
             <header>Participantes</header>
             <section class="participantes-container">
                 <div class="participante">
-                    <figure><img src="/images/arthur.svg" alt=""></figure>
+                    <figure><img src="/images/arthur.png" alt="" class="img-p"></figure>
                     <h1>Arthur Tavares</h1>
                     <h1>1TDSPK</h1>
                     <a href="mailto:rm554970@fiap.com.br">Email</a>
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="participante">
-                    <figure><img src="/images/willian.svg" alt=""></figure>
+                    <figure><img src="/images/willian.jfif" class="img-p" alt=""></figure>
                     <h1>Willian Moreira</h1>
                     <h1>1TDSPK</h1>
                     <a href="mailto:rm555152@fiap.com.br">Email</a>
@@ -39,7 +39,7 @@
                     </a>
                 </div>
                 <div class="participante">       
-                    <figure><img src="/images/noma.jfif" class="noma"alt=""></figure>
+                    <figure><img src="/images/noma.jfif" class="img-p" alt=""></figure>
                     <h1>Gabriel Munno Noma</h1>
                     <h1>1TDSPK</h1>
                     <a href="mailto:rm557494@fiap.com.br">Email</a>
