--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -26,6 +26,41 @@
                     <li><p>País: Brasil</p></li>
                     <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <a href="/htmls/ilhabela.html"><button>Saiba Mais</button></a>
+                </ul>
+            </article>
+            <article class="box-praia">
+                <img src="/images/OIP.jfif" alt="" class="icon">
+                <ul class="info">
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <button>Saiba Mais</button>
+                </ul>
+            </article>
+            <article class="box-praia">
+                <img src="/images/OIP.jfif" alt="" class="icon">
+                <ul class="info">
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <button>Saiba Mais</button>
+                </ul>
+            </article>
+            <article class="box-praia">
+                <img src="/images/OIP.jfif" alt="" class="icon">
+                <ul class="info">
+                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><p>País: Brasil</p></li>
+                    <li><p>Estado: São Paulo</p></li>
+                    <li><p>Região: Sudeste</p></li>
+                    <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
+                    <button>Saiba Mais</button>
                 </ul>
             </article>
             <article class="box-praia">
