--- a/htmls/ilhabela.html
+++ b/htmls/ilhabela.html
@@ -9,40 +9,8 @@
     
 </head>
 <body>
-    <div class="slider">
-        <div class="slides">
-            <input type="radio" name="radio-btn" id="radio1">
-            <input type="radio" name="radio-btn" id="radio2">
-            <input type="radio" name="radio-btn" id="radio3">
-
-            <div class="slide-first">
-                <img src="/images/OIP.jfif" alt="imagem 1">
-            </div>
-
-            <div class="slide">
-                <img src="/images/praia-sobre-nos.jpeg" alt="imagem 1">
-            </div>
-
-            <div class="slide">
-                <img src="/images/mapa.png" alt="imagem 1">
-            </div>
-
-            <div class="navigation-auto">
-                <div class="auto-bt1"></div>
-                <div class="auto-bt2"></div>
-                <div class="auto-bt3"></div>
-            </div>
-        </div>
-
-        <div class="manual-navigation">
-            <label for="radio1" class="manual-btn"></label>
-            <label for="radio2" class="manual-btn"></label>
-            <label for="radio3" class="manual-btn"></label>
-        </div>
-
-    </div>
-
-    
+    https://github.com/kensdy/carousel-web-template
+    <!--Link do github pro carrousel-->
 
 </body>
 
