--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -22,7 +22,8 @@
             <article class="box-praia">
                 <img src="/images/OIP.jfif" alt="" class="icon">
                 <ul class="info">
-                    <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
+                    <li><h1>1. Praia de Ilhabela</h1></li>
+                    <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
                     <li><p>Estado: São Paulo</p></li>
                     <li><p>Região: Sudeste</p></li>
