--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -17,7 +17,159 @@
        </nav>
     </header>
     <main>
-
+        <section class="filtro">
+            <header>Filtrar resultados por:</header>
+            <div class="filtro-box">
+                <h1>Continente</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Américas</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Europa</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">África</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Oriente Médio</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Ásia</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Oceânia</label>
+                </div>
+            </div>
+            <div class="filtro-box">
+                <h1>País</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Brasil</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">México</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Cuba</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Portugal</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Austrália</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Estados Unidos</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Grécia</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Filipinas</label>
+                </div>
+            </div>
+            <div class="filtro-box">
+                <h1>Regiões Brasileiras</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Sudeste</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Nordeste</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Sul</label>
+                </div>
+            </div>
+            <div class="filtro-box">
+                <h1>Estado</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">São Paulo</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Rio de Janeiro</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Rio Grande do Sul</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Santa Catarina</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Bahia</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Ceará</label>
+                </div>
+            </div>
+            <div class="filtro-box">
+                <h1>Classificação</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">1 estrela</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">2 estrelas</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">3 estrelas</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">4 estrelas</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">5 estrela</label>
+                </div>
+            </div>
+            <div class="filtro-box">
+                <h1>Condição de Limpeza</h1>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Muito sujo</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Sujo</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Normal</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Limpo</label>
+                </div>
+                <div class="filtro-checkbox">
+                    <input type="checkbox" name="" id="">
+                    <label for="">Muito limpo</label>
+                </div>
+            </div>
+        </section>
         <section class="praias">
             <article class="box-praia">
                 <img src="/images/OIP.jfif" alt="" class="icon">
