--- a/htmls/praias.html
+++ b/htmls/praias.html
@@ -172,7 +172,7 @@
         </section>
         <section class="praias">
             <article class="box-praia">
-                <img src="/images/OIP.jfif" alt="" class="icon">
+                <img src="/images/ilhabela.jfif" alt="" class="icon">
                 <ul class="info">
                     <li><h1>1. Praia de Ilhabela</h1></li>
                     <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
@@ -184,7 +184,7 @@
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/OIP.jfif" alt="" class="icon">
+                <img src="/images/ilhabela.jfif" alt="" class="icon">
                 <ul class="info">
                     <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
@@ -195,7 +195,7 @@
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/OIP.jfif" alt="" class="icon">
+                <img src="/images/ilhabela.jfif" alt="" class="icon">
                 <ul class="info">
                     <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
@@ -206,7 +206,7 @@
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/OIP.jfif" alt="" class="icon">
+                <img src="/images/ilhabela.jfif" alt="" class="icon">
                 <ul class="info">
                     <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
@@ -217,7 +217,7 @@
                 </ul>
             </article>
             <article class="box-praia">
-                <img src="/images/OIP.jfif" alt="" class="icon">
+                <img src="/images/ilhabela.jfif" alt="" class="icon">
                 <ul class="info">
                     <li><h1>1. Praia de Ilhabela</h1><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
                     <li><p>País: Brasil</p></li>
