--- a/htmls/ilhabela.html
+++ b/htmls/ilhabela.html
@@ -22,7 +22,7 @@
         <div class="carousel-container">
             <div class="carousel" id="carousel">
                 <div class="painel">
-                    <img src="/images/OIP.jfif" alt="">
+                    <img src="/images/ilhabela.jfif" alt="">
                 </div>
                 <div class="painel">
                     <img src="/images/Ilhabela2.jpg" alt="">
