--- a/htmls/ilhabela.html
+++ b/htmls/ilhabela.html
@@ -37,29 +37,26 @@
         </div>
         <section class="infoPraia">
             <ul>
-                <li><h1>1. Praia de Ilhabela</h1></li>
+                <li><h1>Praia de Ilhabela</h1></li>
                 <li>Status: <img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"><img src="/images/star.svg" alt="estrela amarela"></li>
-                <li>Legenda: 1-2 <img src="/images/star.svg" alt="estrela amarela"> -> Precisa de Ajuda, 3-4 <img src="/images/star.svg" alt="estrela amarela">-> Apta para turismo, 5 <img src="/images/star.svg" alt="estrela amarela">-> Limpa e segura</li>
                 <li><p>País: Brasil</p></li>
                 <li><p>Estado: São Paulo</p></li>
                 <li><p>Região: Sudeste</p></li>
                 <p>Ilhabela é um dos únicos municípios-arquipélagos marinhos brasileiros e é localizado no litoral norte do estado de São Paulo.</p>
-                <a href="#coments"><button>Deixar comentário para ajudar!</button></a>
             </ul>
         </section>
         <aside id="coments">
-            <h1>Comentários</h1>
+            <header>Comentários</header>
             <div class="comentarios">
                     <div>
-                        Usuário
+                        <h1>Usuário</h1>
                     </div>
                     <div>
                         <input type="text" id="txtUsuario">
                     </div>
-                </div>
-                <div style="margin-top:20px;">
+                <div>
                     <div>
-                        Comentário
+                        <h1>Comentário</h1>
                     </div>
                     <div>
                         <input type="text" id="txtComentario">
